Fix circle visibility bug

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 #body{
     background-image: url("assets/Breaking-bad.jpeg");
-    /* background-position: center; */
     background-repeat: no-repeat;
     background-size: cover;
+    margin: 0px;
 }
 
 #circleGrid{
